--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Nuestros productos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre nosotros</a>
+                    <a class="nav-link" href="#myCarousel" data-toggle="collapse">Sobre nosotros</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#titulo2">Comuniquemonos</a>
@@ -41,6 +41,50 @@
             </div>
           </nav>
     </header>
+    <br>
+    <!-- Carrusel -->
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicadores -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <!-- Slides -->
+  <div class="carousel-inner">
+    <!-- Slide 1 -->
+    <div class="carousel-item active">
+      <img src="IMG2.jpg" alt="Imagen 1">
+      <div class="carousel-caption">
+        <h3>Nimrodel Pub Restaurant</h3>
+        <p>Nimrodel Significa “dama de la cueva blanca”. Fue una elfa silvana que vivió durante la Tercera Edad del Sol en el bosque de Lothlórien. En honor a su nombre, se acuña Nimrodel al río que nace en las Montañas Nubladas</p>
+      </div>
+    </div>
+    <!-- Slide 2 -->
+    <div class="carousel-item">
+      <div class="carousel-caption">
+        <h3>Nuestro local</h3>
+        <p>“Nimrodel Pub Restaurant es un oasis de calma y diversión, lleno de rincones acogedores en donde se resalta la belleza de su decoración élfica. Es un lugar ideal para visitar solo o acompañado, disfrutar una tarde con amigos, terminar el día después del trabajo o almorzar con tu familia. Puedes probar nuestras tradicionales tablas, en todas sus variedades y que nos han otorgado reconocimiento dentro de la cultura gastronómica. También puedes disfrutar nuestras cervezas de fabricación propia, con sabores que te llevarán a un mágico mundo.”</p>
+      </div>
+      <img src="IMG2.jpg" alt="Imagen 2">
+    </div>
+    <!-- Slide 3 -->
+    <div class="carousel-item">
+      <img src="IMG1.jpg" alt="Imagen 3">
+      <div class="carousel-caption">
+        <h3></h3>
+        <p></p>
+      </div>
+    </div>
+  </div>
+  <!-- Controles de navegación -->
+  <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+</div>
     <br>
     <h1>Nimrodel Pub restaurant</h1>
     <hr>
@@ -158,41 +202,6 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-<!---
-    </form>
-    <br>
-    <br>
-    <div id="reserva">
-        <h1 id="titulo3">Reserva</h1>
-        <label for="nombre">NOMBRE</label>
-        <input type="text" name="nombre" id="nombre" required>
-        <br>
-        <br>
-        <label for="email">CORREO</label>
-        <input type="email" name="email" id="email" required>
-        <br>
-        <br>
-        <label for="number">Teléfono</label>
-        <input type="number" name="number" id="number" required>
-        <br>
-        <br>
-        <label for="fecha">Fecha</label>
-        <input type="date" name="fecha" id="fecha" required>
-        <br>
-        <br>
-        <label for="hora">Hora</label>
-        <input type="time" name="hora" id="hora" required>
-        <br>
-        <br>
-        <label for="asistentes">Cantidad de asistentes</label>
-        <br>
-        <input type="number" name="asistentes" id="asistentes" required>
-        <br>
-        <br>
-        <button type="submit">Reservar</button>
-        <a href="index.html">Regreso</a>
-    </div>
-    </div>-->
     <footer>
     <p id="pie">Todos los derechos reservados &reg;</p>
     </footer>
